--- a/requirements.txt
+++ b/requirements.txt
@@ -5,12 +5,10 @@
 #    pip-compile requirements.in
 #
 beautifulsoup4==4.4.1     # via wagtail
-django-appconf==1.0.1     # via django-compressor
-django-compressor==2.0    # via wagtail
 django-modelcluster==1.1  # via wagtail
 django-taggit==0.18.0     # via wagtail
 django-treebeard==3.0     # via wagtail
-django==1.8.9
+django==1.8.12
 djangorestframework==3.3.2  # via wagtail
 flake8-import-order==0.6.1
 flake8==2.5.2
@@ -25,9 +23,7 @@ pyflakes==1.0.0           # via flake8
 pytest-django==2.9.1
 pytest==2.8.7             # via pytest-django
 pytz==2015.7              # via django-modelcluster
-rcssmin==1.0.6            # via django-compressor
-rjsmin==1.0.12            # via django-compressor
-six==1.10.0               # via django-appconf, html5lib, willow
+six==1.10.0               # via html5lib
 Unidecode==0.4.19         # via wagtail
-wagtail==1.3.1
-Willow==0.2.2             # via wagtail
+wagtail==1.4.3
+Willow==0.3               # via wagtail
