Installed more flake8 plugins

--- a/requirements.in
+++ b/requirements.in
@@ -3,7 +3,10 @@ wagtail==1.4.3
 psycopg2
 
 flake8
+flake8-blind-except
 flake8-import-order
+flake8-print
+flake8-quotes
 pep8-naming
 
 pytest-django
