--- a/requirements.txt
+++ b/requirements.txt
@@ -8,14 +8,14 @@ beautifulsoup4==4.4.1     # via wagtail
 django-modelcluster==2.0  # via wagtail
 django-taggit==0.18.0     # via wagtail
 django-treebeard==3.0     # via wagtail
-django==1.9.7
+django==1.10.5
 djangorestframework==3.3.2  # via wagtail
 flake8-blind-except==0.1.0
 flake8-import-order==0.6.1
 flake8-print==2.0.2
 flake8-quotes==0.3.0
 flake8==2.5.2
-html5lib==0.9999999       # via wagtail
+html5lib==0.999999        # via wagtail
 mccabe==0.4.0             # via flake8
 pep8-naming==0.3.3
 pep8==1.7.0               # via flake8, flake8-import-order, flake8-quotes
@@ -28,7 +28,7 @@ pytest==2.8.7             # via pytest-django
 pytz==2015.7              # via django-modelcluster
 six==1.10.0               # via html5lib
 Unidecode==0.4.19         # via wagtail
-wagtail==1.5.2
+wagtail==1.6.3
 Willow==0.3               # via wagtail
 
 # The following packages are commented out because they are
